fix for bug #168521.  too much disk IO when logging filters. fix for bug #168536.  assertions on shutting down due to filter changes. r/sr=bienvenu